# AudioPlayer

./: settings.gradle
AudioSDK/: CMakeLists.txt  build.gradle
AudioSDK/src/main/: AndroidManifest.xml
AudioSDK/src/main/cpp/: AndroidLog.h
AudioSDK/src/main/cpp/audio/: AVPacketBlockQueue.cpp  AVPacketBlockQueue.h  Audio.cpp  Audio.h  AudioDecoder.cpp  AudioDecoder.h  AudioOutput.cpp  AudioOutput.h  AudioPlayer.cpp  AudioPlayerController.cpp  AudioPlayerController.h  ErrorCode.h  EventCode.h  JavaCaller.cpp  JavaCaller.h  PlayStatus.cpp  PlayStatus.h
AudioSDK/src/main/java/com/kejunyao/audio/: AudioLog.java  AudioPlayer.java  AudioPlayerUtils.java  AudioRecorder.java  ErrorCode.java  EventHandler.java  Mute.java  OnCompleteListener.java  OnErrorListener.java  OnLoadListener.java  OnPauseResumeListener.java  OnPreparedListener.java  OnRecordTimeListener.java  OnTimeInfoListener.java  OnVolumeDecibelListener.java
app/: build.gradle
app/src/androidTest/java/com/kejunyao/audio/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kejunyao/audio/sample/: MainActivity.java  TimeUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/kejunyao/audio/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
